Initial commit: Adding complete Pace Telecom project files.

--- a/team.html
+++ b/team.html
@@ -368,7 +368,7 @@ Call Center / IP Whitelisting</p></div>
                     
 
                                                 <li class="has-dropdown">
-<a href="coverage.html">
+<a href="#">
     Coverage  <i class="fas fa-angle-down"></i>
   </a>
   <!-- <ul class="submenu">
@@ -1064,7 +1064,7 @@ Call Center / IP Whitelisting</p></div>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="coverage.html">
+                                        <a href="#">
                                             Pricing and plans
                                         </a>
                                     </li>
